Fixing header visibility on homepage.

--- a/assets/sass/modules/_header.scss
+++ b/assets/sass/modules/_header.scss
@@ -263,4 +263,8 @@
 	.hentry .entry-header {
 		display: none;
 	}
+
+	&.home .hentry .entry-header {
+		display: block;
+	}
 }
